--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautiluscli"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Jun Luo <jun.luo@nautilusdb.com>", "Sriram Sankaran <sriram@nautilusdb.com>", "Ryan Kang <ryan.kang@nautilusdb.com>"]
 readme = "README.md"
@@ -14,7 +14,7 @@ lib = "^4.0.0"
 api = "^0.0.7"
 
 [tool.poetry.scripts]
-nautiluscli = 'nautiluscli.nautiluscli:run'
+nautiluscli = 'nautiluscli.cli:run'
 
 [build-system]
 requires = ["poetry-core"]
@@ -22,7 +22,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "nautiluscli"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
   { name="Jun Luo", email="jun.luo@nautilisdb.com" },
   { name="Sriram Sankaran", email="sriram@nautilusdb.com" },
